# vox2vfm

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: defines.h.in
include/vox2vfm/: converter.hpp  error.h  exception.hpp  vox2vfm.h
source/: converter.cpp  exception.cpp  main.c  main.cpp  vox2vfm.c  vox2vfm.cpp
